# harnessd

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md  flake.nix  justfile
integrations/: README.md
integrations/nvim/: README.md
integrations/nvim/lua/: harnessd.lua
integrations/nvim/lua/harnessd/: init.lua
integrations/nvim/tests/: headless.lua
integrations/zed/: README.md  complete.ps1  prefetch.ps1
integrations/zed/extension/: Cargo.toml  extension.toml
integrations/zed/extension/src/: lib.rs
src/: acp.rs  autocomplete.rs  cache.rs  cli.rs  codex_sessions.rs  commands.rs  daemon_lock.rs  dashboard.rs  ipc.rs  lib.rs  lsp.rs  main.rs  marks.rs  models.rs  parser.rs  paths.rs  rpc.rs  runtime.rs  scratch.rs  settings.rs  shutdown.rs  state.rs  threads.rs  tui.rs
src/commands/: user_commands.rs
src/ipc/: methods.rs
src/tui/: app.rs
tests/: bridge_integration_tests.rs  cache_tests.rs  cli_tests.rs  daemon_lock_tests.rs  ipc_integration_tests.rs  lsp_integration_tests.rs  parser_tests.rs  paths_tests.rs  rpc_tests.rs
