[package]
name = "harnessd"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "io-util", "process", "signal"] }
interprocess = { version = "2.4.0", features = ["tokio"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
tokio-serde = { version = "0.9.0", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
clap = { version = "4.6.0", features = ["derive"] }
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
dirs = "6.0.0"
tree-sitter = "0.26.8"
